[package]
name = "plz"
version = "0.1.0"
edition = "2023"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/mcculloughcm/plz-cli"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
description = "Generate bash scripts from the command line, using Codex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
question = "0.2.2"
spinners = "4.1.0"
serde_json = { version = "1.0.89", default-features = false }
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "blocking", "rustls-tls"] }
bat = { version = "0.22.1", default-features = false, features = ["regex-onig"] }
colored = "2.0.0"